@@ -1,12 +1,12 @@
-18a6107c95210bc186c8762960744b27 *DESCRIPTION
-ae7281ae78c44abf14a11eeed27d7d1e *NAMESPACE
-944807ec7e4f721416b93565a5a1d8fd *NEWS
+8523711fb8d6ef822c348a10ddddbf02 *DESCRIPTION
+f0ccc151ed5f5066c4296156dff2f3e9 *NAMESPACE
+b1db9fb187763a41b8999a238dbf66ac *NEWS
 3eaafe4f18e15bd2b3e733d0c99a5c72 *R/AIC_momentuHMM.R
 cee496dfc9b1780c9eea196685225730 *R/AICweights.R
 b36ec049617f120f660338db422ba6e3 *R/CIbeta.R
 d03e0facebf7755a06929477b034f934 *R/CIreal.R
 28f72204d67b88ca92e33d8342ffba78 *R/HMMfits.R
-9f947f26e8f3c3a06a7d902201dac008 *R/MIfitHMM.R
+1c1689b175f7776da3b36cd90a143353 *R/MIfitHMM.R
 48ec47fc24543c6bf500eff7ef42676d *R/MIpool.R
 8f1e0006878661a5cec74a6bda638d4d *R/RcppExports.R
 f92dd31886bfc3d5d465de025cda0c97 *R/allProbs.R
@@ -59,7 +59,7 @@ f12adc797a932eeff0aa7377edabc1c1 *R/nLogLike.R
 1947041edd07f6309408971a4486cb0c *R/parDef.R
 b7496cc230fe8d6fb9737677cc6e67ca *R/plotPR.R
 9a6da36e64534f26ad1c904b4867a134 *R/plotSat.R
-219244893a7dcaeba2b1e1b9e85c63bf *R/plotSpatialCov.R
+b180beab3e44248f5c70bf24fb25d552 *R/plotSpatialCov.R
 1699ab0c717179674950db4fa5089a45 *R/plotStates.R
 28bfd95a11362277c79646e7b7657917 *R/plotStationary.R
 7624565e503fb4ecf010b93fe03f0a8f *R/plot_crwData.R
@@ -67,7 +67,7 @@ cd6c0b29064164df623deeb4261396bd *R/plot_miHMM.R
 953d7917614ab9ed61f39801d9ea293c *R/plot_miSum.R
 dd44bc4a30b1ad1dc6a3f1cf0bf8b410 *R/plot_momentuHMM.R
 2410e35e9beb1e35a1c5b1d7e5f0a103 *R/plot_momentuHMMData.R
-89ca2ffa870b15638fd0855702d903a2 *R/prepData.R
+4dd389a0ad1a57627dea3958c5354f79 *R/prepData.R
 950bb0827f2bde5ea67f4311f780667e *R/printMessage.R
 a57d55c3ee2dd5dfbaceeed77f18b98d *R/print_miHMM.R
 b71abb0b11593eb59b6be746237fab77 *R/print_miSum.R
@@ -77,8 +77,8 @@ b71abb0b11593eb59b6be746237fab77 *R/print_miSum.R
 7e4afbebe3ef42a5a8d5eefd32387467 *R/rwrpcauchy.R
 a113d790afcdc2d778f4cd30084d3f9c *R/setModelName.R
 427b7f2d8cebafedf4c52420e679c89c *R/setStateNames.R
-9bf043214e9a9969c20ed1cafd65a39b *R/simData.R
-0cbad54375191aec11a5bdd58dbb8951 *R/simHierData.R
+1d0f7db33cb65a810a440badc28b0c23 *R/simData.R
+daa43427be4d0655d95a6d3db3badd6d *R/simHierData.R
 5d2610d51bfbd4efa865d91cfb6ca78e *R/simObsData.R
 9b4d98299339392eedcc8b735de6673f *R/stateFormulas.R
 c1d927411a55007f5f4792fcd0a56382 *R/stateProbs.R
@@ -88,9 +88,9 @@ c1d927411a55007f5f4792fcd0a56382 *R/stateProbs.R
 7b97e4e85153f2be9e049cb2789645cf *R/turnAngle.R
 4cdc31d2c7a2f5cbf4f120fdd84bc5c6 *R/viterbi.R
 60bf90bbf1d37f5a747122dfc87e8fbe *R/w2n.R
-41af3002b53adb725ae13ec9d9da32db *README.md
-c02d3eb25f91613d140d63f626ea9adb *build/partial.rdb
-e90a8a830908d855da668ecbb9cd8805 *build/vignette.rds
+7e91497e419e7cf283cf93dbf0537475 *README.md
+0c6ad5b3446721162c89589e8077ab1c *build/partial.rdb
+9cb0042fa37e6a1186cc9e6ce9b01bab *build/vignette.rds
 9d82c8c0e8e2681c04ff444cabcb0c68 *data/example.rda
 c6ee6ba98f69cfd1f917f8f0a99791ff *data/forest.rda
 68e1811cea7011bee277d52920d281c0 *data/miExample.rda
@@ -193,10 +193,10 @@ bc3744d0ee1181876eac0a61ca07cf17 *man/turnAngle.Rd
 1eee14623875d1a06b3ea02dd6c2f938 *man/viterbi.Rd
 2419412f954dec38b34acf154c119344 *man/w2n.Rd
 8e6e6637c2eecd8e072911d063d4e108 *src/Makevars
-ebef6e72d7e278f56fcccf0eb2571283 *src/RcppExports.cpp
+e425c11a204c3ba208dcc578b1215880 *src/RcppExports.cpp
 d3951a1efec5f3d7ffa4e7716d9edf26 *src/XBloop.cpp
 0feac1d041e09c185f9f7636fdfa8dbb *src/combine.h
-e12320872647f2d60a423fe6d4ef4352 *src/densities.h
+90393af83741fffd8a228e1b13e95e69 *src/densities.h
 102ded2f5899b97ee6fc3d9eaed31205 *src/getDM.cpp
 99cb2eb726504aa251f98783db1f6a92 *src/momentuHMM_init.c
 84f33b9490659d8470d1389566493290 *src/nLogLike.cpp
